[package]
name = "comicli"
version = "0.1.0"
authors = ["Akash Bhave <akashbbhave@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2"
image = "0.21.2"
termcolor = "1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde_json = "1.0"
rand = "0.7.3"